Add amount owed to the reimbursement page
